Fix views with modals on iOS

--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -32,10 +32,12 @@ h1,h2,h3,h4,h5,h6 {
 h1, .h1{
   text-transform: uppercase;
   line-height: 1;
-  font-size: 50px;
+  // font-size: 50px;
+  font-size: 11vw;
   text-align: center;
   @media only screen and (min-width: 768px) {
-    font-size: 66px;
+    // font-size: 66px;
+    font-size: 7.5vw;
   }
 }
 
