--- a/assets/scss/templates/_hero-area.scss
+++ b/assets/scss/templates/_hero-area.scss
@@ -15,7 +15,7 @@
   // }
   h1{
     color: $primary-color;
-    font-size: 60px;
+    // font-size: 60px;
     position: relative;
     z-index: 2;
     @media only screen and (min-width: 576px) {
